--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.chaseoes</groupId>
-    <artifactId>_PluginTemplate</artifactId>
+    <artifactId>PluginSQL</artifactId>
     <version>1.0</version>
-    <name>PluginTemplate</name>
-    <url>https://github.com/chaseoes/_PluginTemplate</url>
+    <name>PluginSQL</name>
+    <url>https://github.com/chaseoes/PluginSQL</url>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <upload.dbo.category>server-mods</upload.dbo.category>
-        <upload.dbo.slug>_Plugin-Template</upload.dbo.slug>
+        <upload.dbo.slug>plugin-sql</upload.dbo.slug>
     </properties>
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/chaseoes/_PluginTemplate/issues</url>
+        <url>https://github.com/chaseoes/PluginSQL/issues</url>
     </issueManagement>
     <build>
-        <finalName>_PluginTemplate</finalName>
+        <finalName>PluginSQL</finalName>
         <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
         <resources>
             <resource>
