--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,4 @@
-name: _PluginTemplate
-main: me.chaseoes.plugintemplate._PluginTemplate
+name: PluginSQL
+main: com.chaseoes.pluginsql.PluginSQL
 version: 1.0
-description: The template I use for all my plugins. The name starts with _ so it appears first in my file listings.
-commands:
-  plugintemplate:
-    description: The central command for the _PluginTemplate plugin.
-    usage: /<command> [args]
+description: A simple plugin that populates a MySQL database with your plugins on every start.
